tests/e2e/semantics/throw_float.error
Error: syntax error in story at line 2, column 7

2|    throw a
            ^

E0135: Only strings can be thrown.
