tests/e2e/semantics/throw_float.story
a = 1.5
throw a
